--- a/table-reservation-api/package.json
+++ b/table-reservation-api/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "nodemailer": "^6.9.14",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
